fix: list spacing on mobile

--- a/assets/css/imports/blog.scss
+++ b/assets/css/imports/blog.scss
@@ -236,3 +236,8 @@
   min-inline-size: 50%;
   align-self: flex-start;
 }
+
+.e-content > ol,
+.e-content > ul {
+  padding-left: var(--space-m);
+}
